[tool.poetry]
name = "xloop"
version = "1.0.1"
description = "General purpose for/iterator looping generators/utilities."
authors = ["Josh Orr <josh@orr.blue>"]
packages = [{include = "xloop"}]
readme = "README.md"
license = "MIT"
repository = "https://github.com/xyngular/py-xloop"
keywords = ["forloop", "loop", "list", "generator", "utilites"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs = "^1.4.0"
mike = "^1.1.2"
pytest-pycodestyle = "^2.3.0"
pytest = "^7.1.3"
pdoc3 = "^0"
mkdocs-material = "^8.5.6"
tomlkit = "^0.11.5"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --pycodestyle"
testpaths = ["tests", "xloop"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip-string-normalization = 1
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
